# kata-test-commit-revert

./: pyproject.toml  pytest.ini
src/kata_test_commit_revert/: __init__.py  formulae.py
tests/: test_fibonacci.py  test_initial.py
