[project]
name = "kata-test-commit-revert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rajeev Karamcheti", email = "rkaramc@gmail.com" },
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.scripts]
kata-test-commit-revert = "kata_test_commit_revert:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"
